# video-summary-ai

./: .gitignore  pyproject.toml  utils.py
accounts/: forms.py  managers.py  models.py  urls.py  utils.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_user_groups_alter_user_user_permissions.py
config/: settings.py  urls.py
static/css/: style.css
static/js/: index.js
templates/: base.html
templates/accounts/: login.html  recovery_password.html  set_password.html
templates/partials/: footer.html  head.html  messages.html  navbar.html  script.html
templates/video_summary/: posts.html  video_summary.html
video_summary/: apps.py  models.py  urls.py  utils.py  views.py
